# simrunner

./: .gitignore  LICENCE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: docstrings.md
src/: example.ipynb  example_production.ipynb  example_raw.ipynb  run.ipynb  widgets.ipynb
src/modelrunner/core/: runnerbase.py
src/modelrunner/tuflow/: __init__.py  tuflowrunner.py
src/simrunner/core/: gui.py  runnerbase.py
src/simrunner/gui/: ipython.py
src/simrunner/tuflow/: __init__.py  aggregate.py  calc_afflux.py  flood_extent.py  tin_bndy.py  tuflowrunner.py
src/simrunner/tuflow/utilities/: __init__.py  raster.py
src/simrunner/vector/: __init__.py  context.py
tests/: test_modelrunner.py  test_tuflowrunner.py  test_utilities.py
tests/data/tuflow/group_tcf/: group_tag_~s1~_~e1~_~e2~_01.tcf
tests/data/tuflow/one_tcf/: model_~s1~_~e1~_~e2~.tcf
tests/stubs/: process.py  writing_process.py
