[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelrunner"]

[tool.hatch.build]
only-packages = true
exclude = [
  ".conda",
]

[project]
name = "modelrunner"
version = "0.1.0"
authors = [ 
    { name="Tom Norman", email="tom@normcosystems.com" }
]
description = "A python package for running water resource models in a standardised way"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "TBC"
"Bug Tracker" = "TBC"