[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simrunner"]

[tool.hatch.build]
only-packages = true
exclude = [
  ".conda",
  ".github",
  ".gitignore",
  ".vscode"
]

[project]
name = "simrunner"
version = "0.1.0"
authors = [ 
    { name="Tom Norman", email="tom@normcosystems.com" }
]
description = "A python package for running simulation executables in a standardised way"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/norman-tom/simrunner"
"Bug Tracker" = "https://github.com/norman-tom/simrunner/issues"